# TinyRaytracer

./: .gitignore  CMakeLists.txt  README.md
TinyRaytracer/: CMakeLists.txt  TinyRaytracer.cpp  geometry.h
src/: CMakeLists.txt
src/TinyRaytracer/: CMakeLists.txt  TinyRaytracer.cpp  TinyRaytracer.h
src/camera/: CMakeLists.txt  Camera.h
